# python-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tests/: __init__.py
tests/pyright/: pyproject.toml
